# GA2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  individual.hpp  jsonReader.cpp  jsonReader.hpp  main.cpp  tile.hpp
ASN2/: CMakeLists.txt  crossover.csv  k.csv  main.cpp  mu.csv  mutation.csv
GA/: CMakeLists.txt
GA/include/GA/: crossover.hpp  fitness.hpp  ga.hpp  helper.hpp  individual.hpp  migration.hpp  mutation.hpp  parent.hpp  survivor.hpp  tile.hpp
GA/src/: fitness.cpp  ga.cpp  helper.cpp  individual.cpp  migration.cpp  mutation.cpp  parent.cpp  survivor.cpp
Json/include/Json/: jsonReader.hpp  jsonWriter.hpp
Json/src/: jsonReader.cpp
JsonReader/: CMakeLists.txt
JsonReader/src/: jsonReader.cpp
PART-A/: CMakeLists.txt  README.md
PART-A/ASN2/: main.cpp
PART-A/GA/include/GA/: ga.hpp  helper.hpp  mutation.hpp  tile.hpp
PART-A/GA/src/: crossover.cpp  individual.cpp
PART-A/Json/: CMakeLists.txt
PART-A/Json/src/: jsonWriter.cpp
PART-B/: README.md
PART-B/ASN2/: main.cpp
part1/ASN2/: main.cpp
part1/GA/: CMakeLists.txt
part1/GA/include/GA/: fitness.hpp  helper.hpp  individual.hpp  survivor.hpp
part1/GA/src/: fitness.cpp  ga.cpp  helper.cpp  mutation.cpp  survivor.cpp
part1/Json/: CMakeLists.txt
part2/: CMakeLists.txt
part2/ASN2/: CMakeLists.txt  main.cpp
part2/GA/include/GA/: fitness.hpp  helper.hpp  individual.hpp
part2/GA/src/: fitness.cpp  ga.cpp  helper.cpp  individual.cpp
part2/Json/: CMakeLists.txt
part2/Json/src/: jsonReader.cpp  jsonWriter.cpp
